--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,18 +17,19 @@
     <title>Bridge AIHub</title>
 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Mada:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet"> -->
-    <link rel="stylesheet" href="{{ url_for('static', path = 'assets/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
 
 
-    <link rel="stylesheet" href="{{ url_for('static', path = 'assets/css/dropzone.min.css')}}">
+    <link rel="stylesheet" href="{% static 'assets/css/dropzone.min.css' %}">
 
 
-    <link rel="stylesheet" href="{{ url_for('static', path = 'assets/dists/style.css')}}">
+    <link rel="stylesheet" href="{% static 'assets/dists/style.css' %}">
 
-    <link rel="shortcut icon" href="{{ url_for('static', path = 'assets/img/bridge_favicon.png')}}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/bridge_favicon.png' %}" type="image/x-icon">
 
 </head>
 
@@ -53,10 +56,10 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="{{ url_for('static', path='assets/js/bootstrap.min.js')}}"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <script src="{{ url_for('static', path='assets/js/dropzone.min.js')}}"></script>
-    <script src="{{ url_for('static', path='assets/dists/main.js')}}"></script>
+    <script src="{% static 'assets/js/dropzone.min.js' %}"></script>
+    <script src="{% static 'assets/dists/main.js' %}"></script>
 
 </body>
 
