changed background image

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="{% static 'assets/dists/style.css' %}">
 
-    <link rel="shortcut icon" href="{% static 'assets/img/bridge_favicon.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/fav-icon.png' %}" type="image/x-icon">
 
 </head>
 
