--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="land-nav__logo land-nav__logo--1">
-                <img src="{% static 'assets/img/logo.png' %}" alt="logo__nav">
+                <img src="{% static 'assets/img/logo-wht.png' %}" alt="logo__nav">
             </div>
             <div class="land-nav__logo land-nav__logo--2">
                 <img src="{% static 'assets/img/logo.png' %}" alt="logo__nav">
