--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <section class="land-header">
     <div class="container">
         <div class="col-lg-12 col-md-12 col-12 land-header__content" data-aos="fade-right">
-            <h1 class="display-1"> <b class="fw-bold">worth</b> - a Tool for Estimating Salary
+            <h1 class="display-1 text-white"> <b class="fw-bold">worth</b> - a Tool for Estimating Salary
             </h1>
             <h5 class="land-header__sub-title">
                 Welcome to <b>Worth</b>, a machine learning tool
