template for prediction page setup

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -15,8 +15,8 @@
 
             </ul>
             <h2 class="footer__copyright footer__copyright--1"> &copy;
-                <script>document.write(new Date().getFullYear())</script> Bridge.Ai -
-                All Rights Reserved
+                <script>document.write(new Date().getFullYear())</script> worth -
+                All Rights Reserved.
             </h2>
             <h2 class="footer__copyright footer__copyright--3 ms-3">
                 Made with 🤍
