--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="land-nav__ul">
                 <li>
-                    <a href="">
+                    <a href="{% url 'index' %}">
                         Home
                     </a>
                 </li>
