--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 focus on for a successful career.
                 </span>
             </h5>
-            <a href="#" class="btn btn--header land-btn"> <span></span>Find your True Worth</a>
+            <a href="{% url 'prediction' %}" class="btn btn--header land-btn"> <span></span>Find your True Worth</a>
         </div>
     </div>
 </section>
