corrected the select option for designation

--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -64,9 +64,145 @@
                             <select class="form-select form-select-lg" aria-label="Default select example"
                                 name="designation" id="designation" required>
                                 <option selected disabled>Choose Your Preferred Designaion</option>
-                                <option value="degree">Degree</option>
-                                <option value="diploma">Diploma</option>
-                                <option value="no">No Degree/Diploma</option>
+                                <option value="0">Analyst (Development)</option>
+                                <option value="1">Android Developer</option>
+                                <option value="2">Android Officer</option>
+                                <option value="3">Angular Developer</option>
+                                <option value="4">App Developer</option>
+                                <option value="5">Application Developer</option>
+                                <option value="6">Assistant Manager (IT)</option>
+                                <option value="7">Associate Android Developer</option>
+                                <option value="8">Associate Developer</option>
+                                <option value="9">Associate Engineer</option>
+                                <option value="10">Associate Flutter Developer</option>
+                                <option value="11">Associate Full Stack Developer</option>
+                                <option value="12">Associate Product Engineer</option>
+                                <option value="13">Associate Software Developer</option>
+                                <option value="16">Associate Software Technologist</option>
+                                <option value="17">Associated Product Engineer</option>
+                                <option value="18">Associate Software Engineer</option>
+                                <option value="19">Backend Developer</option>
+                                <option value="20">Backend Developer</option>
+                                <option value="21">Block Chain Developer Intern</option>
+                                <option value="22">Blockchain Developer</option>
+                                <option value="23">Clinical Data Programming Associate</option>
+                                <option value="24">Cyber Security Engineer</option>
+                                <option value="25">Data Analyst</option>
+                                <option value="26">Data Engineer</option>
+                                <option value="27">Data Engineer Intern</option>
+                                <option value="28">Data Scientist</option>
+                                <option value="29">Developer</option>
+                                <option value="30">Development Engineer</option>
+                                <option value="31">DevOps Engineer</option>
+                                <option value="32">DevOps Trainee</option>
+                                <option value="33">DevSecOps</option>
+                                <option value="34">Django Developer</option>
+                                <option value="35">Engineer</option>
+                                <option value="36">Executive Placement Officer</option>
+                                <option value="37">Executive Research Informatics</option>
+                                <option value="38">Flutter Developer</option>
+                                <option value="39">Frontend Engineer</option>
+                                <option value="40">Flutter Developer Intern</option>
+                                <option value="41">Flutter Developer Trainee</option>
+                                <option value="42">Flutter Engineer</option>
+                                <option value="43">Flutter Node.js Developer</option>
+                                <option value="44">Flutter Trainer</option>
+                                <option value="45">Frontend Developer</option>
+                                <option value="46">Front End Engineer</option>
+                                <option value="47">Full Stack Developer</option>
+                                <option value="48">Full Stack Software Engineer</option>
+                                <option value="49">Full Stack Engineer</option>
+                                <option value="50">Fullstack Developer</option>
+                                <option value="51">Golang Developer</option>
+                                <option value="52">Golang Developer</option>
+                                <option value="53">Independent Consultant</option>
+                                <option value="54">Intern - Software Engineer</option>
+                                <option value="55">Intern - Member of Technical Staff</option>
+                                <option value="56">Intern CTO</option>
+                                <option value="57">iOS Developer</option>
+                                <option value="58">Junior Android Developer</option>
+                                <option value="59">Junior Backend Developer</option>
+                                <option value="60">Junior Back End Developer</option>
+                                <option value="61">Junior Back-end Developer</option>
+                                <option value="62">Junior Cloud Developer</option>
+                                <option value="63">Junior Developer</option>
+                                <option value="64">Junior Data Scientist</option>
+                                <option value="65">Junior Data Engineer</option>
+                                <option value="66">Junior Flutter Developer</option>
+                                <option value="67">Junior Front End Developer</option>
+                                <option value="68">Junior Full Stack Developer</option>
+                                <option value="69">Junior Fullstack Developer</option>
+                                <option value="70">Junior Front End Developer</option>
+                                <option value="71">Junior Machine Learning Engineer</option>
+                                <option value="72">Junior MERN Stack Developer</option>
+                                <option value="73">Junior Mobile Developer</option>
+                                <option value="74">Junior Node.js Developer</option>
+                                <option value="75">Junior Programmer Analyst</option>
+                                <option value="76">Junior Software Engineer</option>
+                                <option value="77">Junior React Developer</option>
+                                <option value="78">Junior Security Analyst</option>
+                                <option value="79">Junior Software Developer</option>
+                                <option value="80">Junior Software Engineer</option>
+                                <option value="81">Junior Web Developer</option>
+                                <option value="82">Junior Web Designer</option>
+                                <option value="83">Machine Learning Engineer</option>
+                                <option value="84">MEAN Stack Developer</option>
+                                <option value="85">Member of Technical Staff</option>
+                                <option value="86">MERN Stack Developer</option>
+                                <option value="87">Mobile App Developer Intern</option>
+                                <option value="88">MERN Stack Tutor</option>
+                                <option value="89">Mobile App Developer</option>
+                                <option value="90">Mobile Application Developer</option>
+                                <option value="91">Mobile Developer</option>
+                                <option value="92">Node.js Developer</option>
+                                <option value="93">Node.js Engineer</option>
+                                <option value="94">Node.js Trainee</option>
+                                <option value="95">Node.js Developer</option>
+                                <option value="96">Product Engineer</option>
+                                <option value="97">Product Engineer</option>
+                                <option value="98">Product Engineer - AI/ML</option>
+                                <option value="99">Product Engineer Associate</option>
+                                <option value="100">Project Architect</option>
+                                <option value="101">Project Engineer Backend</option>
+                                <option value="102">Python Backend Developer</option>
+                                <option value="103">Python Developer</option>
+                                <option value="104">Python Developer Intern</option>
+                                <option value="105">Python Django Developer</option>
+                                <option value="106">Python Full Stack Developer</option>
+                                <option value="107">Product Engineer</option>
+                                <option value="108">React Developer</option>
+                                <option value="109">React Native Developer</option>
+                                <option value="110">Senior Flutter Developer</option>
+                                <option value="111">Senior Game Developer</option>
+                                <option value="112">Senior Systems Engineer</option>
+                                <option value="113">SOC Analyst</option>
+                                <option value="114">SOC Engineer</option>
+                                <option value="115">Software Design Engineer</option>
+                                <option value="116">Software Developer</option>
+                                <option value="117">Software Developer Engineer</option>
+                                <option value="118">Software Developer Intern</option>
+                                <option value="119">Software Developer Trainee</option>
+                                <option value="120">Software Development Engineer II</option>
+                                <option value="121">Software Development Engineer</option>
+                                <option value="122">Software Development Engineer III</option>
+                                <option value="123">Software Development Engineer I</option>
+                                <option value="124">Software Engineer</option>
+                                <option value="125">Software Programmer</option>
+                                <option value="126">System Software Engineer</option>
+                                <option value="127">System Engineer</option>
+                                <option value="128">Technical Team</option>
+                                <option value="129">Technology Associate</option>
+                                <option value="130">Trainee Engineer</option>
+                                <option value="131">Trainee Software Developer</option>
+                                <option value="132">Trainee Software Engineer</option>
+                                <option value="133">Trainer-IP</option>
+                                <option value="134">Unity 3D Developer</option>
+                                <option value="135">Web Developer</option>
+                                <option value="136">Web GL Developer</option>
+                                <option value="137">Web Designer</option>
+                                <option value="138">WordPress Developer</option>
+                                <option value="143">UI/UX Designer</option>
+                                <option value="147">User Interface Developer</option>
                             </select>
                         </div>
                     </div>
@@ -150,8 +286,8 @@
                     <div class="col-5">
                         <div class="mb-4">
                             <label class="form-label">Graduate?</label>
-                            <select class="form-select form-select-lg" aria-label="Default select example" name="graduate"
-                                id="graduate" required>
+                            <select class="form-select form-select-lg" aria-label="Default select example"
+                                name="graduate" id="graduate" required>
                                 <option selected disabled>Did you complete 6/7 months program?</option>
                                 <option value="yes">Yes</option>
                                 <option value="no">No</option>
