--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <title>Bridge AIHub</title>
+    <title>worth - Find Your True Value</title>
 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Mada:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
