designed prediction page

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
                 </span>
             </h5>
             <a href="{% url 'prediction' %}" class="btn btn--header land-btn"> <span></span>Find your True Worth</a>
-        </div>
+            <a href="" class="btn btn--header land-btn"> <span></span>Career Analytics</a>
+        </div>  
     </div>
 </section>
 
