--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,6 @@
 
     <title>worth - Find Your True Value</title>
 
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Mada:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -42,9 +41,6 @@
     </style>
 
     <a href="#" id="scroll" style="display: none;"> <i class="fas fa-arrow-up"></i></a>
-    <!-- <a href="https://wa.me/+918075779439" class="whatsapp-float" target="_blank">
-        <i class="fab fa-whatsapp whatsapp-float--icon"></i>
-    </a> -->
 
     <main>
 
@@ -60,6 +56,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="{% static 'assets/js/dropzone.min.js' %}"></script>
     <script src="{% static 'assets/dists/main.js' %}"></script>
+
+    {% block scripts %}
+
+    {% endblock scripts %}
 
 </body>
 
